Rewritten DSP section in background and some progress in other areas

--- a/eecs-thesis-template-main/common/references/references.bib
+++ b/eecs-thesis-template-main/common/references/references.bib
@@ -463,6 +463,37 @@
   note = {Accessed: 2024-09-20}
 }
 
+@inproceedings{singleChannel,
+  author    = {Osama Mahfoudia and François Horlin and Xavier Neyt},
+  title     = {On the feasibility of {DVB-T} based passive radar with a single receiver channel},
+  booktitle = {Proceedings of the 15th International Radar Symposium (IRS)},
+  year      = {2014},
+  pages     = {1--6},
+  doi       = {10.1109/IRS.2014.6869297},
+  organization = {IEEE},
+}
+
+@techreport{FFTcorrelation,
+  author       = {Don Koks},
+  title        = {How to Create and Manipulate Radar Range–Doppler Plots},
+  institution  = {Defence Science and Technology Organisation},
+  year         = {2012},
+  number       = {DSTO–TN–1386},
+  address      = {Cyber \& Electronic Warfare Division, Australian Government},
+}
+
+@INPROCEEDINGS{ZhangClutter,
+  author = {Lu Zhang and Konstanty S. Bialkowski},
+  title = {Passive Radar for Low Doppler Targets Detection using Background Estimation and Subtraction},
+  booktitle = {2020 IEEE International Conference on Radar (RADAR)},
+  year = {2020},
+  pages = {1--6},
+  publisher = {IEEE},
+  address = {Brisbane, QLD, Australia},
+  doi = {10.1109/RADAR49081.2020.9231322},
+}
+
+
 
 
 
